--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>LEGO Webstore</title>
+    <title>LEGO</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
